data/derived/comb/progs/unify/prog2614.ml.out
Characters 118-130:
  ((sum / 10) :: (sum mod 10)) :: a
                 ^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
